--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
-<script>
-  window.onload = function()
-  {
-    alert('hello world!')
-  }
-</script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+        <link rel="icon" href="ico3.png" sizes="16x16">
+        <title>KyLin Studio 兴开源之势、助中国操作操作系统生态</title>
+    </head>
+    <body>
+        <style>
+            body{
+                margin: 0;
+                padding: 0;
+            }
+            .topdiv
+            {
+                width: 100%;
+                height: 70px;
+                background-color: white;
+                box-shadow: 0px 0px 20px black;
+            }
+            .logo1
+            {
+                width: 40px;
+                height: 40px;
+                background-image: url(./ico3.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        </style>
+        <div class="topdiv">
+            <table>
+                <td>
+                    <div style="width: 20px;height: 70px;"></div>
+                </td>
+                <td>
+                    <div class="logo1"></div>
+                </td>
+                <td>
+                    <h2 style="color: rgb(0, 183, 255);">KyLin Studio</h2>
+                </td>
+            </table>
+        </div>
+    </body>
+</html>
