--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <link rel="icon" href="ico3.png" sizes="16x16">
         <title>KyLin Studio 兴开源之势、助中国操作操作系统生态</title>
+        <script src="script.js"></script>
+        <link href="page.css" rel="stylesheet" />
     </head>
     <body>
         <style>
@@ -18,6 +20,7 @@
                 height: 70px;
                 background-color: white;
                 box-shadow: 0px 0px 20px black;
+                position: absolute;
             }
             .logo1
             {
@@ -27,7 +30,46 @@
                 background-repeat: no-repeat;
                 background-size: cover;
             }
+            .leftmenu
+            {
+                width: 70px;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                box-shadow: 0px 0px 10px black;
+            }
+            .leftmenu:hover
+            {
+                box-shadow: 0px 0px 10px black;
+            }
         </style>
+        <iframe class="iframe" src="main.html" id="iframe"></iframe>
+        <div class="menu" style="    background-color: white;" id="menu" align="center">
+            <br />
+            <div style="width: 100%;height: 100px;"></div>
+            <table align="center">
+                <td>
+                    <div style="width: 70px;height: 10px;"></div>
+                </td>
+                <td>
+                    <input class="search" placeholder="Search" />
+                    <div style="width: 100%;height: 40px;"></div>
+                    <button class="btn" onclick="window.location.href=''">Index</button>
+                    <button class="btn">Downloads</button>
+                    <button class="btn" onclick="window.location.href='document/index.html'">Document</button>
+                    <button class="btn">Help</button>
+                    <button class="btn">Develop</button>
+                </td>
+            </table>
+        </div>
+        <div class="leftmenu" id="leftmenu" align="center">
+            <div style="width: 100%;height: 70px;"></div>
+            <br />
+            <button class="searchbtn">Search</button>
+            <br />
+            <br />
+            <button class="searchbtn">Pages</button>
+        </div>
         <div class="topdiv">
             <table>
                 <td>
