--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                 <td>
                     <input class="search" placeholder="Search" />
                     <div style="width: 100%;height: 40px;"></div>
-                    <button class="btn" onclick="window.location.href=''">Index</button>
-                    <button class="btn">Downloads</button>
-                    <button class="btn" onclick="window.location.href='document/index.html'">Document</button>
-                    <button class="btn">Help</button>
-                    <button class="btn">Develop</button>
+                    <button class="btn" onclick="window.location.href=''">首页 Main</button>
+                    <button class="btn">下载 Downloads</button>
+                    <button class="btn" onclick="window.location.href='document'">文档 Document</button>
+                    <button class="btn">帮助Help</button>
+                    <button class="btn">开发 Develop</button>
+                    <button class="btn" onclick="window.location.href='activation'">激活 Activation</button>
+                    <button class="btn" style="background-color: rgb(255, 101, 101);" id="exit">Close</button>
                 </td>
             </table>
         </div>
