--- a/activation/index.html
+++ b/activation/index.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
+<!DOCtype html>
 <html>
     <head>
-        <title>Document||Kylin Studio</title>
+        <title>KyLin Studio||Activation</title>
         <meta charset="utf-8" />
-        <link href="../ico3.png" rel="icon" sizes="16x16"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <link rel="icon" href="ico3.png" sizes="16x16">
     </head>
     <body>
         <style>
-            .topdiv
-            {
-                width: 100%;
-                height: 70px;
-                box-shadow: 0px 0px 10px black;
-            }
-            body
-            {
-                margin: 0;
-                padding: 0;    
-            }
             .logo1
             {
                 width: 40px;
@@ -27,6 +15,18 @@
                 background-image: url(../ico3.png);
                 background-repeat: no-repeat;
                 background-size: cover;
+            }
+            .topdiv
+            {
+                width: 100%;
+                height: 70px;
+                background-color: white;
+                box-shadow: 0px 0px 20px black;
+                position: absolute;
+            }
+            body{
+                margin: 0;
+                padding: 0;
             }
         </style>
         <div class="topdiv">
@@ -41,6 +41,5 @@
                     <h2 style="color: rgb(0, 183, 255);">KyLin Studio</h2>
                 </td>
             </table>
-        </div>
     </body>
 </html>
