--- a/main.html
+++ b/main.html
@@ -92,7 +92,9 @@
                     </td>
                 </table>
                 <br />
-                <p style="color: white;">
+                <p style="font-weight: 600;color: white;">
+                    使用 Java , C/C++ , Shell , Python在Linux了来构建、创造你的Linux项目
+                    <br /><br />
                     Using Java , C/C++ , Shell , Python To
                     
                     Build , Create Your Linux Project On Linux.
@@ -100,14 +102,14 @@
                 <div style="width: 100%;height:200px;"></div>
                 <div class="topbtn">
                     <br />
-                    <button class="btn">Downloads</button>
-                    <button class="btn">Documents</button>
-                    <button class="btn">Repositories</button>
+                    <button class="btn">下载 -> Downloads</button>
+                    <button class="btn">文档 -> Documents</button>
+                    <button class="btn">仓库 -> Repositories</button>
                 </div>
             </div>
             <br />
             <br />
-            <br />
+            <div style="width: 100%;height: 100px;"></div>
             <h1>KyLin Studio's UI</h1>
             <div class="topimg2"></div>
             <div style="width: 100%;height:30px;"></div>
