--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <style>
             body
             {
@@ -39,6 +40,7 @@
                 background-repeat: no-repeat;
                 box-shadow: 0px 0px 20px black;
                 border-radius: 15px;
+                border: none;
             }
             .topimg3
             {
@@ -49,6 +51,11 @@
                 background-size: cover;
                 border-radius: 15px;
                 box-shadow: 0px 0px 20px black;
+                border: none;
+                margin-left: 10px;
+                margin-right: 10px;
+                margin-top: 50px;
+                margin-bottom: 50px;
             }
             .bottomdiv
             {
@@ -76,6 +83,17 @@
             .btn:hover{
                 box-shadow: 0px 0px 10px rgb(0, 183, 255);
                 color: rgb(0, 183, 255);
+            }
+            .topimg4
+            {
+                width: 300px;
+                height: 200px;
+                background-image: url(./img/4.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                border-radius: 15px;
+                box-shadow: 0px 0px 20px black;
+                border: none;
             }
         </style>
     </head>
@@ -111,20 +129,11 @@
             <br />
             <div style="width: 100%;height: 100px;"></div>
             <h1>KyLin Studio's UI</h1>
-            <div class="topimg2"></div>
-            <div style="width: 100%;height:30px;"></div>
-            <p style="font-weight: 600;width: 60%;">
-                KyLin Studio is a toolkit for linux developer.Developer
-                tools for Chinese operating systems.You can build Deb , 
-                RPM , Deepin/Uos Deb Package For linux OS.
-            </p>
-            <p style="font-weight: 600;">
-            </p>
-            <br />
-            <br />
-            <div class="topimg3"></div>
-            <br />
-            <br />
+            <button class="topimg2"></button>
+            <button class="topimg3"></button>
+            <button class="topimg4"></button>
+
+            <div style="width:100%;height: 50px;"></div>
             <div class="bottomdiv">
                 <div style="width:100%;height: 50px;"></div>
                 <div class="topdiv">
